--- a/calendar.html
+++ b/calendar.html
@@ -633,7 +633,7 @@
                         <div class="form-data__line">
                             <div class="form-data__arrival">
                                 <label for="arrival2">Прибытие</label>
-                                <input required placeholder="дд.мм.гггг" id="arrival2" type='text' class='datepicker-here' />
+                                <input required placeholder="дд.мм.гггг" id="arrival2" type='text' class='datepicker-here form-control' />
                             </div>
                             <div class="form-data__dep">
                                 <label for="departure2">Выезд</label>
@@ -904,7 +904,7 @@
                     <div class="form-data__line">
                         <div class="form-data__arrival">
                             <label for="arrival2">Прибытие</label>
-                            <input placeholder="дд.мм.гггг" id="arrival2" type='text' class='datepicker-here' />
+                            <input placeholder="дд.мм.гггг" id="arrival2" type='text' class='datepicker-here form-control' />
                         </div>
                         <div class="form-data__dep">
                             <label for="departure2">Выезд</label>
